--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div>
       <a href="tel:+79031101598">Ярош Татьяна Анатольевна</a>
       <br />
-      <a href="tel:+79152175709">Нина Васильевна</a>
+      <a href="tel:+79152175709">Ярош Нина Васильевна</a>
     </div>
     <svg
       xmlns:dc="http://purl.org/dc/elements/1.1/"
